--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,24 @@
+body, html {
+  overflow-y: hidden;
+  overflow-x: hidden;
+  overscroll-behavior: none;
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  margin: 0;
+  padding: 0;
+}
+
+#root {
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  overflow: hidden;
+}
+
 .App {
   text-align: center;
   min-height: 100vh;
@@ -6,9 +27,10 @@
   display: flex;
   flex-direction: column;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
-  overflow-x: hidden;
+  overflow: hidden;
+  position: relative;
 }
 
 .App-logo {
@@ -39,13 +61,11 @@ main {
   flex: 1;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding-top: 10px;
   width: 100%;
   max-width: 100%;
   margin: 0;
-  padding-left: 0;
-  padding-right: 0;
+  padding: 0;
+  overflow: hidden;
 }
 
 .loading {
